# starklings-cairo1

./: .gitignore  .replit  Cargo.toml  README.APP.md  README.CLI.md  README.md  ReadMe  ReadMe2  ReadMe3  ReadMe4  ReadMe5  ReadMe6  Scarb.toml  flake.nix  info copy.toml  info.toml
.github/workflows/: rust.yml
app/: .gitignore  README.md
app/api/: .env.example  Dockerfile  anti-cheat.json  exercises  info.toml  package-lock.json  package.json  pnpm-lock.yaml
app/api/exercises/arrays/: arrays1.cairo  arrays2.cairo  arrays3.cairo
app/api/exercises/dict/: dict1.cairo  dict2.cairo  dict3.cairo
app/api/exercises/enums/: enums1.cairo  enums2.cairo  enums3.cairo
app/api/exercises/functions/: functions2.cairo  functions3.cairo  functions4.cairo
app/api/exercises/if/: if1.cairo  if2.cairo
app/api/exercises/loops/: README.md  loops1.cairo  loops2.cairo
app/api/exercises/modules/: modules1.cairo  modules2.cairo  readme.md
app/api/exercises/move_semantics/: move_semantics1.cairo  move_semantics2.cairo  move_semantics3.cairo  move_semantics4.cairo  move_semantics5.cairo  move_semantics6.cairo
app/api/exercises/operations/: operations1.cairo  operations2.cairo
app/api/exercises/options/: options1.cairo  options2.cairo  options3.cairo
app/api/exercises/primitive_types/: primitive_types1.cairo  primitive_types2.cairo  primitive_types3.cairo  primitive_types4.cairo
app/api/exercises/quizs/: quizs1.cairo
app/api/exercises/structs/: structs1.cairo  structs2.cairo  structs3.cairo
app/api/exercises/traits/: traits1.cairo  traits2.cairo  traits3.cairo
app/api/exercises/variables/: variables1.cairo  variables2.cairo  variables3.cairo  variables4.cairo  variables5.cairo  variables6.cairo
app/api/src/: app.js  config.js  db.js  index.js
app/api/src/controllers/: exercises.controller.js  github.controller.js  (+2 more)
app/client/: .env-example  .eslintrc.json  .gitignore  cypress.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/client/public/: index.html  manifest.json
app/client/src/: App.tsx  index.css  index.tsx
app/database/: init.sql
app/mocks/: exercises-exerciseName.json  exercises.json  groups.json
corelib/src/: array.cairo  debug.cairo
exercises/01_intro/: README.md  intro1.nr
exercises/02_variables/: README.md  variables1.nr  variables2.nr
exercises/03_operations/: operations1.nr  operations2.nr
exercises/04_structs/: structs1.nr  structs2.nr
exercises/06_bigint/: bigint1.nr
exercises/07_hash_maps/: hashmaps1.nr  hashmaps2.nr  hashmaps3.nr  hashmaps4.nr  hashmaps5.nr
exercises/1.intro/: intro1.nr  intro2.nr  intro3.nr
exercises/arrays/: README.md  arrays1.cairo  arrays2.cairo  arrays3.cairo  arrays4.cairo
exercises/dict/: README.md  dict1.cairo  dict2.cairo  dict3.cairo
exercises/enums/: README.md  enums1.cairo  enums2.cairo  enums3.cairo
exercises/examples_for_contributors/: example_execute.nr  example_test.nr
exercises/functions/: README.md  functions1.cairo  functions2.cairo  functions3.cairo  functions4.cairo
exercises/if/: README.md  if1.cairo  if2.cairo
exercises/intro/: intro1.cairo  intro2.cairo  intro3.cairo  intro4.cairo  placeholder.rs
exercises/loops/: README.md  loops1.cairo  loops2.cairo
exercises/modules/: modules1.cairo  modules2.cairo  readme.md
exercises/move_semantics/: README.md  move_semantics1.cairo  move_semantics2.cairo  move_semantics3.cairo  move_semantics4.cairo  move_semantics5.cairo  move_semantics6.cairo
exercises/operations/: README.md  operations1.cairo  operations2.cairo  operations3.cairo
exercises/options/: README.md  options1.cairo  options2.cairo  options3.cairo
exercises/primitive_types/: README.md  primitive_types1.cairo  primitive_types2.cairo  primitive_types3.cairo  primitive_types4.cairo
exercises/quizs/: quizs1.cairo
exercises/starknet/: README.md
exercises/starknet/basics/: starknet1.cairo  starknet2.cairo  starknet3.cairo  starknet4.cairo
exercises/starknet/components/: starknet6.cairo
exercises/starknet/interoperability/: starknet5.cairo
exercises/structs/: README.md  structs1.cairo  structs2.cairo  structs3.cairo
exercises/traits/: README.md  traits1.cairo  traits2.cairo  traits3.cairo
exercises/variables/: README.md  variables1.cairo  variables2.cairo  variables3.cairo  variables4.cairo  variables5.cairo  variables6.cairo
exercises_cairo/1.intro/: intro1.nr
exercises_cairo/dict/: README.md  dict1.cairo
exercises_cairo/enums/: README.md
exercises_cairo/functions/: functions3.cairo
exercises_cairo/if/: README.md  if1.cairo  if2.cairo
exercises_cairo/intro/: intro1.cairo
exercises_cairo/loops/: loops2.cairo
exercises_cairo/modules/: modules1.cairo
exercises_cairo/move_semantics/: move_semantics4.cairo  move_semantics5.cairo
exercises_cairo/operations/: README.md  operations1.cairo  operations2.cairo
exercises_cairo/options/: options3.cairo
exercises_cairo/primitive_types/: primitive_types4.cairo
exercises_cairo/quizs/: quizs1.cairo
exercises_cairo/starknet/: README.md
exercises_cairo/starknet/basics/: starknet1.cairo  starknet3.cairo
exercises_cairo/starknet/interoperability/: starknet5.cairo
exercises_cairo/structs/: README.md  structs2.cairo  structs3.cairo
exercises_cairo/traits/: README.md
exercises_cairo/variables/: README.md  variables1.cairo  variables2.cairo
runner-crate/: Scarb.toml
runner-crate/src/: lib.cairo
runner_crate/: Nargo.toml
runner_crate_noir/: Nargo.toml
runner_crate_noir/src/: lib.nr
runner_crate_noir_run/: Nargo.toml  Prover.toml
solutions/: if1.cairo  if2.cairo
src/: Cargo.toml  cairo-runner.rs  cairo-tester.rs  exercise.rs  main.rs  noir.rs  noir_test.rs  project.rs  run.rs  scarb.rs  starklings_runner.rs  starklings_tester.rs  ui.rs  utils.rs  verify.rs
src/nargo/: mod.rs  noir_compile.rs  noir_compile_full.rs  noir_errors.rs  noir_execute.rs  noir_fs.rs  noir_run.rs
tests/: integration_tests.rs
tests/fixture/cairo/: compileFail.cairo  compilePass.cairo  info.toml  testFails.cairo  testPass.cairo
tests/fixture/noir/: testFails.nr  testPass.nr
(+88 files in other folders)
